--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="hu">
 <head>
   <meta charset="UTF-8">
-  <title>I love You</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>I Love You</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <canvas id="cancas"></canvas>
+  <canvas id="canvas"></canvas>
   <script src="script.js"></script>
 </body>
 </html>
