--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="hu">
 <head>
   <meta charset="UTF-8">
-  <title>Pulzáló 3D Szív</title>
+  <title>Pulzáló 3D Szív + I LOVE YOU</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
